feat: add filterQuery param on all context types to search by properties and custom properties
