# api/openapi/model-registry.yaml
@@ -207,6 +207,7 @@ paths:
       tags:
         - ModelRegistryService
       parameters:
+        - $ref: "#/components/parameters/filterQuery"
         - $ref: "#/components/parameters/pageSize"
         - $ref: "#/components/parameters/orderBy"
         - $ref: "#/components/parameters/sortOrder"
@@ -413,6 +414,7 @@ paths:
       tags:
         - ModelRegistryService
       parameters:
+        - $ref: "#/components/parameters/filterQuery"
         - $ref: "#/components/parameters/pageSize"
         - $ref: "#/components/parameters/orderBy"
         - $ref: "#/components/parameters/sortOrder"
@@ -519,6 +521,7 @@ paths:
       parameters:
         - $ref: "#/components/parameters/name"
         - $ref: "#/components/parameters/externalId"
+        - $ref: "#/components/parameters/filterQuery"
         - $ref: "#/components/parameters/pageSize"
         - $ref: "#/components/parameters/orderBy"
         - $ref: "#/components/parameters/sortOrder"
@@ -996,6 +999,7 @@ paths:
       tags:
         - ModelRegistryService
       parameters:
+        - $ref: "#/components/parameters/filterQuery"
         - $ref: "#/components/parameters/pageSize"
         - $ref: "#/components/parameters/orderBy"
         - $ref: "#/components/parameters/sortOrder"
@@ -1191,6 +1195,7 @@ paths:
       tags:
         - ModelRegistryService
       parameters:
+        - $ref: "#/components/parameters/filterQuery"
         - $ref: "#/components/parameters/pageSize"
         - $ref: "#/components/parameters/orderBy"
         - $ref: "#/components/parameters/sortOrder"
@@ -1297,6 +1302,7 @@ paths:
       parameters:
         - $ref: "#/components/parameters/name"
         - $ref: "#/components/parameters/externalId"
+        - $ref: "#/components/parameters/filterQuery"
         - $ref: "#/components/parameters/pageSize"
         - $ref: "#/components/parameters/orderBy"
         - $ref: "#/components/parameters/sortOrder"
@@ -2941,6 +2947,16 @@ components:
           value: "10"
       name: parentResourceId
       description: ID of the parent resource to use for search.
+      schema:
+        type: string
+      in: query
+      required: false
+    filterQuery:
+      examples:
+        filterQuery:
+          value: "name='my-model' AND state='LIVE'"
+      name: filterQuery
+      description: "A query string to filter the list of entities. The query string is parsed and applied to the list of entities. The query string can contain the following operators: '=', '!=', '>', '<', '>=', '<=', 'IN', 'NOT IN', 'LIKE', 'NOT LIKE', 'IS NULL', 'IS NOT NULL', 'AND', 'OR', 'NOT'. The query string can also contain parentheses to group expressions."
       schema:
         type: string
       in: query
