# internal/server/openapi/api_model_registry_service_service.go
@@ -224,7 +224,7 @@ func (s *ModelRegistryServiceAPIService) FindServingEnvironment(ctx context.Cont
 
 // GetEnvironmentInferenceServices - List All ServingEnvironment&#39;s InferenceServices
 func (s *ModelRegistryServiceAPIService) GetEnvironmentInferenceServices(ctx context.Context, servingenvironmentId string, name string, externalID string, pageSize string, orderBy model.OrderByField, sortOrder model.SortOrder, nextPageToken string) (ImplResponse, error) {
-	listOpts, err := apiutils.BuildListOption(pageSize, orderBy, sortOrder, nextPageToken)
+	listOpts, err := apiutils.BuildListOptionLegacy(pageSize, orderBy, sortOrder, nextPageToken)
 	if err != nil {
 		return ErrorResponse(api.ErrToStatus(err), err), err
 	}
@@ -255,7 +255,7 @@ func (s *ModelRegistryServiceAPIService) GetInferenceServiceModel(ctx context.Co
 
 // GetInferenceServiceServes - List All InferenceService&#39;s ServeModel actions
 func (s *ModelRegistryServiceAPIService) GetInferenceServiceServes(ctx context.Context, inferenceserviceId string, name string, externalID string, pageSize string, orderBy model.OrderByField, sortOrder model.SortOrder, nextPageToken string) (ImplResponse, error) {
-	listOpts, err := apiutils.BuildListOption(pageSize, orderBy, sortOrder, nextPageToken)
+	listOpts, err := apiutils.BuildListOptionLegacy(pageSize, orderBy, sortOrder, nextPageToken)
 	if err != nil {
 		return ErrorResponse(api.ErrToStatus(err), err), err
 	}
@@ -277,7 +277,7 @@ func (s *ModelRegistryServiceAPIService) GetInferenceServiceVersion(ctx context.
 
 // GetInferenceServices - List All InferenceServices
 func (s *ModelRegistryServiceAPIService) GetInferenceServices(ctx context.Context, pageSize string, orderBy model.OrderByField, sortOrder model.SortOrder, nextPageToken string) (ImplResponse, error) {
-	listOpts, err := apiutils.BuildListOption(pageSize, orderBy, sortOrder, nextPageToken)
+	listOpts, err := apiutils.BuildListOptionLegacy(pageSize, orderBy, sortOrder, nextPageToken)
 	if err != nil {
 		return ErrorResponse(api.ErrToStatus(err), err), err
 	}
@@ -299,7 +299,7 @@ func (s *ModelRegistryServiceAPIService) GetArtifact(ctx context.Context, artifa
 
 // GetArtifacts - List All Artifacts
 func (s *ModelRegistryServiceAPIService) GetArtifacts(ctx context.Context, artifactType model.ArtifactTypeQueryParam, pageSize string, orderBy model.OrderByField, sortOrder model.SortOrder, nextPageToken string) (ImplResponse, error) {
-	listOpts, err := apiutils.BuildListOption(pageSize, orderBy, sortOrder, nextPageToken)
+	listOpts, err := apiutils.BuildListOptionLegacy(pageSize, orderBy, sortOrder, nextPageToken)
 	if err != nil {
 		return ErrorResponse(api.ErrToStatus(err), err), err
 	}
@@ -321,7 +321,7 @@ func (s *ModelRegistryServiceAPIService) GetModelArtifact(ctx context.Context, m
 
 // GetModelArtifacts - List All ModelArtifacts
 func (s *ModelRegistryServiceAPIService) GetModelArtifacts(ctx context.Context, pageSize string, orderBy model.OrderByField, sortOrder model.SortOrder, nextPageToken string) (ImplResponse, error) {
-	listOpts, err := apiutils.BuildListOption(pageSize, orderBy, sortOrder, nextPageToken)
+	listOpts, err := apiutils.BuildListOptionLegacy(pageSize, orderBy, sortOrder, nextPageToken)
 	if err != nil {
 		return ErrorResponse(api.ErrToStatus(err), err), err
 	}
@@ -347,7 +347,7 @@ func (s *ModelRegistryServiceAPIService) GetModelVersionArtifacts(ctx context.Co
 	orderBy model.OrderByField, sortOrder model.SortOrder, nextPageToken string) (ImplResponse, error) {
 	// TODO name unused
 	// TODO externalID unused
-	listOpts, err := apiutils.BuildListOption(pageSize, orderBy, sortOrder, nextPageToken)
+	listOpts, err := apiutils.BuildListOptionLegacy(pageSize, orderBy, sortOrder, nextPageToken)
 	if err != nil {
 		return ErrorResponse(api.ErrToStatus(err), err), err
 	}
@@ -359,8 +359,8 @@ func (s *ModelRegistryServiceAPIService) GetModelVersionArtifacts(ctx context.Co
 }
 
 // GetModelVersions - List All ModelVersions
-func (s *ModelRegistryServiceAPIService) GetModelVersions(ctx context.Context, pageSize string, orderBy model.OrderByField, sortOrder model.SortOrder, nextPageToken string) (ImplResponse, error) {
-	listOpts, err := apiutils.BuildListOption(pageSize, orderBy, sortOrder, nextPageToken)
+func (s *ModelRegistryServiceAPIService) GetModelVersions(ctx context.Context, filterQuery string, pageSize string, orderBy model.OrderByField, sortOrder model.SortOrder, nextPageToken string) (ImplResponse, error) {
+	listOpts, err := apiutils.BuildListOptionWithFilterTranslation(filterQuery, pageSize, orderBy, sortOrder, nextPageToken, apiutils.ModelVersionEntity)
 	if err != nil {
 		return ErrorResponse(api.ErrToStatus(err), err), err
 	}
@@ -381,10 +381,10 @@ func (s *ModelRegistryServiceAPIService) GetRegisteredModel(ctx context.Context,
 }
 
 // GetRegisteredModelVersions - List All RegisteredModel&#39;s ModelVersions
-func (s *ModelRegistryServiceAPIService) GetRegisteredModelVersions(ctx context.Context, registeredmodelId string, name string, externalID string, pageSize string, orderBy model.OrderByField, sortOrder model.SortOrder, nextPageToken string) (ImplResponse, error) {
+func (s *ModelRegistryServiceAPIService) GetRegisteredModelVersions(ctx context.Context, registeredmodelId string, name string, externalID string, filterQuery string, pageSize string, orderBy model.OrderByField, sortOrder model.SortOrder, nextPageToken string) (ImplResponse, error) {
 	// TODO name unused
 	// TODO externalID unused
-	listOpts, err := apiutils.BuildListOption(pageSize, orderBy, sortOrder, nextPageToken)
+	listOpts, err := apiutils.BuildListOptionWithFilterTranslation(filterQuery, pageSize, orderBy, sortOrder, nextPageToken, apiutils.ModelVersionEntity)
 	if err != nil {
 		return ErrorResponse(api.ErrToStatus(err), err), err
 	}
@@ -396,8 +396,8 @@ func (s *ModelRegistryServiceAPIService) GetRegisteredModelVersions(ctx context.
 }
 
 // GetRegisteredModels - List All RegisteredModels
-func (s *ModelRegistryServiceAPIService) GetRegisteredModels(ctx context.Context, pageSize string, orderBy model.OrderByField, sortOrder model.SortOrder, nextPageToken string) (ImplResponse, error) {
-	listOpts, err := apiutils.BuildListOption(pageSize, orderBy, sortOrder, nextPageToken)
+func (s *ModelRegistryServiceAPIService) GetRegisteredModels(ctx context.Context, filterQuery string, pageSize string, orderBy model.OrderByField, sortOrder model.SortOrder, nextPageToken string) (ImplResponse, error) {
+	listOpts, err := apiutils.BuildListOptionWithFilterTranslation(filterQuery, pageSize, orderBy, sortOrder, nextPageToken, apiutils.RegisteredModelEntity)
 	if err != nil {
 		return ErrorResponse(api.ErrToStatus(err), err), err
 	}
@@ -419,7 +419,7 @@ func (s *ModelRegistryServiceAPIService) GetServingEnvironment(ctx context.Conte
 
 // GetServingEnvironments - List All ServingEnvironments
 func (s *ModelRegistryServiceAPIService) GetServingEnvironments(ctx context.Context, pageSize string, orderBy model.OrderByField, sortOrder model.SortOrder, nextPageToken string) (ImplResponse, error) {
-	listOpts, err := apiutils.BuildListOption(pageSize, orderBy, sortOrder, nextPageToken)
+	listOpts, err := apiutils.BuildListOptionLegacy(pageSize, orderBy, sortOrder, nextPageToken)
 	if err != nil {
 		return ErrorResponse(api.ErrToStatus(err), err), err
 	}
@@ -632,8 +632,8 @@ func (s *ModelRegistryServiceAPIService) GetExperiment(ctx context.Context, expe
 }
 
 // GetExperimentExperimentRuns - List All Experiment's ExperimentRuns
-func (s *ModelRegistryServiceAPIService) GetExperimentExperimentRuns(ctx context.Context, experimentId string, name string, externalId string, pageSize string, orderBy model.OrderByField, sortOrder model.SortOrder, nextPageToken string) (ImplResponse, error) {
-	listOpts, err := apiutils.BuildListOption(pageSize, orderBy, sortOrder, nextPageToken)
+func (s *ModelRegistryServiceAPIService) GetExperimentExperimentRuns(ctx context.Context, experimentId string, name string, externalId string, filterQuery string, pageSize string, orderBy model.OrderByField, sortOrder model.SortOrder, nextPageToken string) (ImplResponse, error) {
+	listOpts, err := apiutils.BuildListOptionWithFilterTranslation(filterQuery, pageSize, orderBy, sortOrder, nextPageToken, apiutils.ExperimentRunEntity)
 	if err != nil {
 		return ErrorResponse(api.ErrToStatus(err), err), err
 	}
@@ -656,7 +656,7 @@ func (s *ModelRegistryServiceAPIService) GetExperimentRun(ctx context.Context, e
 // GetExperimentRunArtifacts - List all artifacts associated with the ExperimentRun
 func (s *ModelRegistryServiceAPIService) GetExperimentRunArtifacts(ctx context.Context, experimentrunId string,
 	name string, externalId string, artifactType model.ArtifactTypeQueryParam, pageSize string, orderBy model.OrderByField, sortOrder model.SortOrder, nextPageToken string) (ImplResponse, error) {
-	listOpts, err := apiutils.BuildListOption(pageSize, orderBy, sortOrder, nextPageToken)
+	listOpts, err := apiutils.BuildListOptionLegacy(pageSize, orderBy, sortOrder, nextPageToken)
 	if err != nil {
 		return ErrorResponse(api.ErrToStatus(err), err), err
 	}
@@ -668,8 +668,8 @@ func (s *ModelRegistryServiceAPIService) GetExperimentRunArtifacts(ctx context.C
 }
 
 // GetExperimentRuns - List All ExperimentRuns
-func (s *ModelRegistryServiceAPIService) GetExperimentRuns(ctx context.Context, pageSize string, orderBy model.OrderByField, sortOrder model.SortOrder, nextPageToken string) (ImplResponse, error) {
-	listOpts, err := apiutils.BuildListOption(pageSize, orderBy, sortOrder, nextPageToken)
+func (s *ModelRegistryServiceAPIService) GetExperimentRuns(ctx context.Context, filterQuery string, pageSize string, orderBy model.OrderByField, sortOrder model.SortOrder, nextPageToken string) (ImplResponse, error) {
+	listOpts, err := apiutils.BuildListOptionWithFilterTranslation(filterQuery, pageSize, orderBy, sortOrder, nextPageToken, apiutils.ExperimentRunEntity)
 	if err != nil {
 		return ErrorResponse(api.ErrToStatus(err), err), err
 	}
@@ -681,8 +681,8 @@ func (s *ModelRegistryServiceAPIService) GetExperimentRuns(ctx context.Context, 
 }
 
 // GetExperiments - List All Experiments
-func (s *ModelRegistryServiceAPIService) GetExperiments(ctx context.Context, pageSize string, orderBy model.OrderByField, sortOrder model.SortOrder, nextPageToken string) (ImplResponse, error) {
-	listOpts, err := apiutils.BuildListOption(pageSize, orderBy, sortOrder, nextPageToken)
+func (s *ModelRegistryServiceAPIService) GetExperiments(ctx context.Context, filterQuery string, pageSize string, orderBy model.OrderByField, sortOrder model.SortOrder, nextPageToken string) (ImplResponse, error) {
+	listOpts, err := apiutils.BuildListOptionWithFilterTranslation(filterQuery, pageSize, orderBy, sortOrder, nextPageToken, apiutils.ExperimentEntity)
 	if err != nil {
 		return ErrorResponse(api.ErrToStatus(err), err), err
 	}
@@ -754,7 +754,7 @@ func (s *ModelRegistryServiceAPIService) UpsertExperimentRunArtifact(ctx context
 // GetExperimentRunMetricHistory - Get metric history for an ExperimentRun
 func (s *ModelRegistryServiceAPIService) GetExperimentRunMetricHistory(ctx context.Context, experimentrunId string,
 	name string, stepIds string, pageSize string, orderBy model.OrderByField, sortOrder model.SortOrder, nextPageToken string) (ImplResponse, error) {
-	listOpts, err := apiutils.BuildListOption(pageSize, orderBy, sortOrder, nextPageToken)
+	listOpts, err := apiutils.BuildListOptionLegacy(pageSize, orderBy, sortOrder, nextPageToken)
 	if err != nil {
 		return ErrorResponse(api.ErrToStatus(err), err), err
 	}
